<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="accepted">Accepted</string>
    <string name="accuracy">Accuracy</string>
    <string name="add">Add</string>
    <string name="add_track">Add Track</string>
    <string name="agps_initialisation">AGPS Initialisation …</string>
    <string name="agps_tracker_license">License of AGPS-Tracker-Om</string>
    <string name="already_exists">already exists.</string>
    <string name="already_exists_not_imported">Gpx file already exists in your directory.</string>
    <string name="altitude">Elevation</string>
    <string name="altitude_box">Elevation\n a.s.l.</string>
    <string name="altitude_short">Alt</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_description">AGPS-Tracker-Om for your trekking adventures</string>
    <string name="app_title">A-GPS Tracker++ (Community)</string>
    <string name="app_version">Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arrow_works_if_calibrated">The directional arrow icon will show the orientation of your phone on the map. In case you detect a significant error in the pointing direction this is due to an poorly calibrated compass. Compass calibration can performed with Google Maps and touching the blu icon that shows your position.</string>
    <string name="ascent">Ascent:</string>
    <string name="ask_for_support">Email Support</string>
    <string name="attribution_osm">© OpenStreetMap contributors</string>
    <string name="auto_source">Auto</string>
    <string name="ave_speed">Average Speed</string>
    <string name="blue_circle">Blue circle</string>
    <string name="both_sources">Both GPS and DEMs</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="cancel">Cancel</string>
    <string name="cant_read_file">Can\'t read this file !!!</string>
    <string name="change_gpx_dir_msg">This setting allows you to change the folder where gpx files and related photos are stored. \nNote: the name \"AGPS-Tracker\" is the one used in previous releases where it was automatically assigned by the App.</string>
    <string name="change_gpx_dir_title">Change Gpx Directory</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_current_track">CLEAR CURRENT TRACK</string>
    <string name="clear_ld_track">Clear screen</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="comment">Edit Comment:</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connection_to_server">Connection to server ...</string>
    <string name="continue_button">CONTINUE</string>
    <string name="copy_track">Copy this track to your directory?</string>
    <string name="create_or_allow_gpx_dir">Create Directory</string>
    <string name="current_map">Current map</string>
    <string name="current_track">Your Track</string>
    <string name="current_track_data">Current Track Data:</string>
    <string name="date">Date:</string>
    <string name="default_style">Default</string>
    <string name="default_web_client_id">859984410439-7h9d6ih16kqsvq4iecphpf4tme4eatjj.apps.googleusercontent.com</string>
    <string name="delete">Delete</string>
    <string name="delete_file">Delete file</string>
    <string name="dem_filename_cant_be_changed">DEMs file names can\'t be changed</string>
    <string name="dem_loaded">DEM Loaded successfully</string>
    <string name="dem_not_found"> DEM not found</string>
    <string name="dems_domains">DEMs Domains</string>
    <string name="dems_elev_source">DEMs</string>
    <string name="dems_menu">Your DEMs</string>
    <string name="descent">Descent:</string>
    <string name="description_2p">Description:</string>
    <string name="difference_in_height">Difference in Height:</string>
    <string name="distance">Distance</string>
    <string name="distance2">Distance:</string>
    <string name="distance_short">Dist.</string>
    <string name="distance_unit">Measurement System</string>
    <string name="do_you_want_to_load_dem">The DEM for this area is not in your archive.Do you want to load it? \nOnce downloaded, hold down a point on the map and you will see the generation of the level lines.</string>
    <string name="do_you_want_to_send_position">Do you want to send your position coordinates?</string>
    <string name="edit_comment">Comment</string>
    <string name="edit_gpx">Edit</string>
    <string name="elev_source">Elevation Source</string>
    <string name="elevate_style">\"Elevate\"</string>
    <string name="elevate_style_selection">\"Elevate\" (4.5.1) is a different map visualisation style that can be used with the default maps but is particularly designed for OAM Maps. With a OAM map this style can be customised for the following activities:</string>
    <string name="elv_city">City</string>
    <string name="elv_cycling">Cycling</string>
    <string name="elv_hiking">Hiking</string>
    <string name="elv_mtb">Mountain Bike</string>
    <string name="exit">Exit</string>
    <string name="feets">British System</string>
    <string name="gps_source">GPS</string>
    <string name="gpx_tracks">GPX Tracks</string>
    <string name="help_info">Help/Info</string>
    <string name="import_track">Import Track</string>
    <string name="initial_settings">Initial Settings</string>
    <string name="licenses">Licenses</string>
    <string name="load_oam_maps">OAM Map Download</string>
    <string name="load_remote_map">Map Download</string>
    <string name="map_dialog_activity">Map Archive</string>
    <string name="map_style">Maps Style</string>
    <string name="maps_downloaded">Your Maps</string>
    <string name="meters">Metric System</string>
    <string name="modify_waypoint">Modify POI</string>
    <string name="new_waypoint_free">New POI on Map</string>
    <string name="new_waypoint_on_track">New POI on Track</string>
    <string name="oss_license_maps">Maps related Licenses</string>
    <string name="oss_license_title">Open Source Licenses</string>
    <string name="pois">Points Of Interest</string>
    <string name="privacy">Privacy</string>
    <string name="save_modified_track">Save Modified Track</string>
    <string name="settings">Settings</string>
    <string name="show_all_photo_points">Photo spots in this area</string>
    <string name="show_arrow">My Position Icon</string>
    <string name="show_compass">Show compass</string>
    <string name="skip">skip</string>
    <string name="use_osm_maps">Enable OAM Maps Downloads</string>
    <string name="use_sd">SD Maps Storage</string>
    <string name="warning_gps">WARNING\nYour Location mode settings are not correct. You need to enable GPS. \n High Accuracy Location Mode is recommended.</string>
    <string name="your_GPX_tracks">Your Tracks</string>
    <string name="your_folder">Your Folder</string>
    <string name="your_photos">Your Photos</string>
    <string name="map_render_settings_title">Map Rendering &amp; Performance</string>
    <string name="render_threads_title">Worker Threads</string>
    <string name="render_threads_auto">Auto (Recommended)</string>
    <string name="render_threads_1">1 Thread (Single Core)</string>
    <string name="render_threads_2">2 Threads</string>
    <string name="render_threads_4">4 Threads</string>
    <string name="hardware_accel_title">GPU Hardware Acceleration</string>
    <string name="cache_labels_title">Cache Map Labels</string>
    <string name="map_sources_section_title">Map Sources</string>
    <string name="use_legacy_server_title">Use legacy server (agps-tracker.cloud)</string>
    <string name="maps_url_label">Maps download URL</string>
    <string name="dems_url_label">DEMs download URL</string>
</resources>