<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_map_black_48dp"
        android:id="@+id/load_map"
        android:title="@string/map_dialog_activity"
        app:showAsAction="always">
        <menu>
            <item
                android:icon="@drawable/ic_cloud_download_black_36dp"
                android:id="@+id/download_maps"
                android:title="@string/load_remote_map"/>
            <item
                android:icon="@drawable/ic_cloud_download_black_36dp"
                android:id="@+id/download_oam_map"
                android:visible="false"
                android:title="@string/load_oam_maps"/>
            <item
                android:icon="@drawable/ic_map_black_36dp"
                android:id="@+id/select_maps"
                android:title="@string/maps_downloaded"/>
            <item
                android:icon="@drawable/ic_crop_original_black_36dp"
                android:id="@+id/dems_list"
                android:title="@string/dems_menu"/>
        </menu>
    </item>
    <item
        android:icon="@drawable/gpx_icon2"
        android:id="@+id/gpx_and_photo"
        android:title="@string/your_GPX_tracks"
        app:showAsAction="always">
        <menu>
            <item
                android:icon="@drawable/focus_loaded_track2"
                android:id="@+id/gpx_load"
                android:title="@string/gpx_tracks">
                <menu>
                    <item
                        android:icon="@drawable/focus_loaded_track2"
                        android:id="@+id/gpx_load_from_your_folder"
                        android:title="@string/your_folder"/>
                    <item
                        android:icon="@drawable/focus_loaded_track2"
                        android:id="@+id/gpx_import_from_downloads"
                        android:title="@string/import_track"/>
                </menu>
            </item>
            <item
                android:icon="@drawable/edit_gpx_track"
                android:id="@+id/gpx_edit"
                android:title="@string/edit_gpx">
                <menu>
                    <item
                        android:icon="@drawable/ic_edit_location_black_24dp"
                        android:id="@+id/poi_edit"
                        android:title="@string/pois">
                        <menu>
                            <item
                                android:icon="@drawable/ic_add_location_alt_black_36dp"
                                android:id="@+id/new_waypoint_on_map"
                                android:title="@string/new_waypoint_free"/>
                            <item
                                android:icon="@drawable/ic_add_location_alt_black_36dp"
                                android:id="@+id/new_waypoint_on_track"
                                android:title="@string/new_waypoint_on_track"/>
                            <item
                                android:icon="@drawable/ic_location_on_black_36dp"
                                android:id="@+id/modify_waypoiny"
                                android:title="@string/modify_waypoint"/>
                        </menu>
                    </item>
                    <item
                        android:icon="@drawable/ic_add_circle_outline_black_24dp"
                        android:id="@+id/gpx_add"
                        android:title="@string/add_track"/>
                    <item
                        android:icon="@drawable/ic_save_black_24dp"
                        android:id="@+id/gpx_save_modified"
                        android:title="@string/save_modified_track"/>
                </menu>
            </item>
            <item
                android:icon="@drawable/ic_camera_alt_black_24dp"
                android:id="@+id/photo_list_your_folder"
                android:title="@string/your_photos"/>
            <item
                android:icon="@drawable/ic_camera_alt_black_24dp"
                android:id="@+id/photo_show_photo_points"
                android:title="@string/show_all_photo_points"/>
            <item
                android:icon="@drawable/ic_clear_black_24dp"
                android:id="@+id/clear_loaded_track"
                android:title="@string/clear_ld_track"/>
        </menu>
    </item>
    <item
        android:icon="@drawable/ic_info_black_36dp"
        android:title="@string/help_info"
        app:showAsAction="always">
        <menu>
            <item
                android:icon="@drawable/ic_info_black_24dp"
                android:id="@+id/help_info"
                android:title="@string/help_info"/>
            <item
                android:icon="@drawable/ic_email_black_24dp"
                android:id="@+id/support"
                android:title="@string/ask_for_support"/>
            <item
                android:icon="@drawable/ic_subject_black_24dp"
                android:id="@+id/show_lic"
                android:title="@string/licenses"
                app:showAsAction="never">
                <menu>
                    <item
                        android:id="@+id/tracker_license"
                        android:title="@string/agps_tracker_license"/>
                    <item
                        android:id="@+id/licenses_maps"
                        android:title="@string/oss_license_maps"/>
                    <item
                        android:id="@+id/licenses_info"
                        android:title="@string/oss_license_title"/>
                </menu>
            </item>
            <item
                android:icon="@drawable/ic_description_black_24dp"
                android:id="@+id/privacy"
                android:title="@string/privacy"/>
            <item
                android:icon="@drawable/ic_description_black_24dp"
                android:id="@+id/version"
                android:title="@string/app_version"/>
        </menu>
    </item>
    <item
        android:icon="@drawable/ic_settings_black_36dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/show_compass"
                android:title="@string/show_compass"
                android:checkable="true"/>
            <item
                android:id="@+id/show_orientation_arrow"
                android:title="@string/show_arrow"/>
            <item
                android:id="@+id/menu_distance_unit"
                android:title="@string/distance_unit">
                <menu>
                    <group android:checkableBehavior="single">
                        <item
                            android:id="@+id/meters"
                            android:checked="true"
                            android:title="@string/meters"/>
                        <item
                            android:id="@+id/feets"
                            android:title="@string/feets"/>
                    </group>
                </menu>
            </item>
            <item
                android:id="@+id/menu_elevation_mode"
                android:title="@string/elev_source">
                <menu>
                    <group android:checkableBehavior="single">
                        <item
                            android:id="@+id/elev_auto"
                            android:checked="true"
                            android:title="@string/auto_source"/>
                        <item
                            android:id="@+id/elev_dems"
                            android:title="@string/dems_elev_source"/>
                        <item
                            android:id="@+id/elev_gps"
                            android:title="@string/gps_source"/>
                        <item
                            android:id="@+id/elev_both"
                            android:title="@string/both_sources"/>
                    </group>
                </menu>
            </item>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/use_sd"
                    android:title="@string/use_sd"
                    android:checkable="true"/>
            </group>
            <item
                android:id="@+id/menu_style"
                android:title="@string/map_style">
                <menu>
                    <group android:checkableBehavior="single">
                        <item
                            android:id="@+id/map_default"
                            android:title="@string/default_style"/>
                        <item
                            android:id="@+id/map_elevate"
                            android:title="@string/elevate_style"/>
                    </group>
                </menu>
            </item>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/enable_use_of_oam_maps"
                    android:title="@string/use_osm_maps"
                    android:checkable="true"/>
            </group>
            <item
                android:id="@+id/menu_map_render_settings"
                android:title="@string/map_render_settings_title"/>
            <item
                android:id="@+id/change_gpx_dir"
                android:title="@string/change_gpx_dir_title"/>
        </menu>
    </item>
    <item
        android:icon="@drawable/ic_power_settings_new_black_24dp"
        android:id="@+id/menu_exit"
        android:title="@string/exit"
        app:showAsAction="ifRoom"/>
</menu>
