<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/button_border_bianco"
    android:paddingBottom="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/map_style"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/elevate_style_selection"/>
    <RadioGroup
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">
        <RadioButton
            android:id="@+id/elv_hiking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elv_hiking"/>
        <RadioButton
            android:id="@+id/elv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elv_city"/>
        <RadioButton
            android:id="@+id/elv_mtb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elv_mtb"/>
        <RadioButton
            android:id="@+id/elv_cycling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elv_cycling"/>
    </RadioGroup>
</LinearLayout>
