<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/comment_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/comment"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:hint="@string/edit_comment"
        android:layout_below="@+id/comment_key"
        android:inputType="text"
        android:layout_marginStart="10dp"/>
    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_google_play_services_update_button"
        android:layout_alignParentBottom="true"
        android:onClick="onChangeComment"
        android:layout_alignParentEnd="true"/>
    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_alignParentBottom="true"
        android:onClick="onCancelComment"
        android:layout_marginEnd="50dp"
        android:layout_toStartOf="@+id/update"/>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/update"
        android:layout_below="@+id/comment"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp">
        <com.ortiz.touchview.TouchImageView
            android:id="@+id/photo_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"/>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
