<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/button_rec0"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="18sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/warning_gps"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/change_settings"
            android:background="@drawable/icon_image_with_border_button"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/initial_settings"
            android:layout_alignParentLeft="true"
            android:onClick="onClick_changeLocSettings"/>
        <Button
            android:gravity="left"
            android:background="@drawable/icon_image_with_border_button"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/skip"
            android:layout_alignParentRight="true"
            android:onClick="onClick_skipLocSettings"/>
    </RelativeLayout>
</LinearLayout>
